[Cairo] Fix memory leak in GraphicsContext3DCairo.cpp https://bugs.webkit.org/show_bug.cgi?id=89561

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-06-20
Reviewed by Martin Robinson.

Fix a memory leak in GraphicsContext3D::getImageData().

* platform/graphics/cairo/GraphicsContext3DCairo.cpp:
(WebCore::GraphicsContext3D::getImageData): asNewNativeImage() returns a
caller-owned pointer to the native image data. So, using OwnPtr to manage
memory automatically.

Canonical link: https://commits.webkit.org/107428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120826 268f45cc-cd09-0410-ab3c-d52691b4dbfc