Source/WebCore/platform/graphics/cairo/GraphicsContext3DCairo.cpp
@@ -159,7 +159,8 @@ bool GraphicsContext3D::getImageData(Image* image, unsigned int format, unsigned
         decoder.setData(image->data(), true);
         if (!decoder.frameCount() || !decoder.frameIsCompleteAtIndex(0))
             return false;
-        imageSurface = decoder.createFrameAtIndex(0)->surface();
+        OwnPtr<NativeImageCairo> nativeImage = adoptPtr(decoder.createFrameAtIndex(0));
+        imageSurface = nativeImage->surface();
     } else {
         imageSurface = image->nativeImageForCurrentFrame()->surface();
         if (!premultiplyAlpha)
